--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ coreKtx = "1.13.1"
 espressoCore = "3.5.1"
 junit = "4.13.2"
 junitVersionKtx = "1.1.5"
-kotlin = "1.9.0"
+kotlin = "2.0.0"
 kxml2 = "2.3.0"
 material = "1.12.0"
 material3Android = "1.2.1"
@@ -50,5 +50,6 @@ volley = { module = "com.android.volley:volley", version.ref = "volley" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-
+#jetbrains-kotlin-android =     { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
