--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 activityCompose = "1.9.0"
-agp = "8.4.1"
+agp = "8.5.0-beta02"
 appcompat = "1.6.1"
 bcprovJdk16 = "1.46"
 biometricKtx = "1.2.0-alpha05"
