--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,4 @@ android.nonTransitiveRClass=true
 #android.enableJetifier=true
 # https://docs.gradle.org/current/userguide/configuration_cache.html
 #org.gradle.configuration-cache=true
+android.experimental.enableTestFixturesKotlinSupport=true
