--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,6 +26,7 @@ uiautomator = "2.3.0"
 volley = "1.2.1"
 uiTooling = "1.6.7"
 junitVersion = "1.1.5"
+runtimeLivedata = "1.6.7"
 
 [libraries]
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
@@ -54,6 +55,7 @@ mockk-android = { group = "io.mockk", name = "mockk-android", version.ref = "moc
 volley = { module = "com.android.volley:volley", version.ref = "volley" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "uiTooling" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
+androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
