--- a/gradle.properties
+++ b/gradle.properties
@@ -23,5 +23,5 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 #android.enableJetifier=true
 # https://docs.gradle.org/current/userguide/configuration_cache.html
-#org.gradle.configuration-cache=true
+org.gradle.configuration-cache=true
 android.experimental.enableTestFixturesKotlinSupport=true
