--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ junitVersion = "1.1.5"
 junitVersionKtx = "1.1.5"
 kotlin = "2.0.0"
 kotlinStdlib = "2.0.0"
+kotlinxSerializationJson = "1.7.1"
 kxml2 = "2.3.0"
 material = "1.12.0"
 material3Android = "1.2.1"
@@ -51,6 +52,7 @@ bcprov-jdk16 = { module = "org.bouncycastle:bcprov-jdk16", version.ref = "bcprov
 feature-delivery-ktx = { group = "com.google.android.play", name = "feature-delivery-ktx", version.ref = "featureDeliveryKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlinStdlib" }
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 kxml2 = { group = "net.sf.kxml", name = "kxml2", version.ref = "kxml2" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
