--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,8 +7,8 @@ biometricKtx = "1.2.0-alpha05"
 coreKtx = "1.13.1"
 featureDeliveryKtx = "2.1.0"
 junit = "4.13.2"
-junitVersion = "1.1.5"
-junitVersionKtx = "1.1.5"
+junitVersion = "1.2.1"
+junitVersionKtx = "1.2.1"
 kotlin = "2.0.0"
 kotlinStdlib = "2.0.0"
 kotlinxCoroutinesCore = "1.9.0-RC"
@@ -23,8 +23,8 @@ mockk = "1.13.11"
 mockkAgent = "1.13.11"
 mockkAndroid = "1.13.11"
 preferenceKtx = "1.2.1"
-rules = "1.5.0"
-runner = "1.5.0"
+rules = "1.6.1"
+runner = "1.6.1"
 runtimeLivedataVersion = "1.6.8"
 uiTestJunit4Android = "1.6.8"
 uiTooling = "1.6.8"
@@ -32,11 +32,15 @@ uiToolingPreviewAndroid = "1.6.8"
 uiautomator = "2.3.0"
 volley = "1.2.1"
 jetbrainsKotlinJvm = "2.0.0"
+cameraCore = "1.3.4"
+cameraLifecycle = "1.3.4"
 
 [libraries]
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 androidx-biometric-ktx = { group = "androidx.biometric", name = "biometric-ktx", version.ref = "biometricKtx" }
+androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "cameraCore" }
+androidx-camera-view = { module = "androidx.camera:camera-view", version.ref = "cameraCore" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitVersionKtx" }
@@ -67,6 +71,8 @@ mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
 mockk-agent = { group = "io.mockk", name = "mockk-agent", version.ref = "mockkAgent" }
 mockk-android = { group = "io.mockk", name = "mockk-android", version.ref = "mockkAndroid" }
 volley = { module = "com.android.volley:volley", version.ref = "volley" }
+androidx-camera-core = { group = "androidx.camera", name = "camera-core", version.ref = "cameraCore" }
+androidx-camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "cameraLifecycle" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
