--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
+# libraries
 activityCompose = "1.9.0"
-agp = "8.5.0-beta02"
 appcompat = "1.7.0"
 bcprovJdk16 = "1.46"
 biometricKtx = "1.2.0-alpha05"
@@ -8,50 +8,49 @@ coreKtx = "1.13.1"
 featureDeliveryKtx = "2.1.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
-junitVersionKtx = "1.2.1"
-kotlin = "2.0.0"
 kotlinStdlib = "2.0.0"
 kotlinxCoroutinesCore = "1.9.0-RC"
 kotlinxSerializationJson = "1.7.1"
 kxml2 = "2.3.0"
-lintApi = "30.0.0"
 lintTestsVersion = "30.0.0"
 material = "1.12.0"
 material3Android = "1.2.1"
 materialIconsExtendedAndroid = "1.6.8"
 mockk = "1.13.11"
-mockkAgent = "1.13.11"
-mockkAndroid = "1.13.11"
 preferenceKtx = "1.2.1"
-rules = "1.6.1"
-runner = "1.6.1"
+# 1.6.1 doesn't work, runner errors, it CLEARLY is there https://maven.google.com/web/index.html?q=androidx.test#androidx.test:runner:1.6.1
+androidXTest = "1.6.1"
 runtimeLivedataVersion = "1.6.8"
 uiTestJunit4Android = "1.6.8"
 uiTooling = "1.6.8"
 uiToolingPreviewAndroid = "1.6.8"
 uiautomator = "2.3.0"
 volley = "1.2.1"
-jetbrainsKotlinJvm = "2.0.0"
 cameraCore = "1.3.4"
-cameraLifecycle = "1.3.4"
+#plugins
+agp = "8.5.0-beta02"
+kotlin = "2.0.0"
+jetbrainsKotlinJvm = "2.0.0"
 
 [libraries]
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 androidx-biometric-ktx = { group = "androidx.biometric", name = "biometric-ktx", version.ref = "biometricKtx" }
-androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "cameraCore" }
-androidx-camera-view = { module = "androidx.camera:camera-view", version.ref = "cameraCore" }
+androidx-camera-camera2 = { group = "androidx.camera", name = "camera-camera2", version.ref = "cameraCore" }
+androidx-camera-core = { group = "androidx.camera", name = "camera-core", version.ref = "cameraCore" }
+androidx-camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "cameraCore" }
+androidx-camera-view = { group = "androidx.camera", name = "camera-view", version.ref = "cameraCore" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
-androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitVersionKtx" }
+androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitVersion" }
 androidx-material-icons-extended-android = { group = "androidx.compose.material", name = "material-icons-extended-android", version.ref = "materialIconsExtendedAndroid" }
 androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
 androidx-preference-ktx = { group = "androidx.preference", name = "preference-ktx", version.ref = "preferenceKtx" }
-androidx-rules = { group = "androidx.test", name = "rules", version.ref = "rules" }
-androidx-runner = { module = "androidx.test:runner", version.ref = "runner" }
+androidx-rules = { group = "androidx.test", name = "rules", version.ref = "androidXTest" }
+androidx-runner = { group = "androidx.test", name = "runner", version.ref = "androidXTest" }
 androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedataVersion" }
 androidx-ui-test-junit4-android = { group = "androidx.compose.ui", name = "ui-test-junit4-android", version.ref = "uiTestJunit4Android" }
-androidx-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "uiTestJunit4Android" }
+androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest", version.ref = "uiTestJunit4Android" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "uiTooling" }
 androidx-ui-tooling-preview-android = { group = "androidx.compose.ui", name = "ui-tooling-preview-android", version.ref = "uiToolingPreviewAndroid" }
 androidx-uiautomator = { module = "androidx.test.uiautomator:uiautomator", version.ref = "uiautomator" }
@@ -63,21 +62,17 @@ kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutinesCore" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 kxml2 = { group = "net.sf.kxml", name = "kxml2", version.ref = "kxml2" }
-lint-api = { module = "com.android.tools.lint:lint-api", version.ref = "lintApi" }
-lint-checks = { module = "com.android.tools.lint:lint-checks", version.ref = "lintApi" }
 lint-tests-v3000 = { module = "com.android.tools.lint:lint-tests", version.ref = "lintTestsVersion" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
-mockk-agent = { group = "io.mockk", name = "mockk-agent", version.ref = "mockkAgent" }
-mockk-android = { group = "io.mockk", name = "mockk-android", version.ref = "mockkAndroid" }
+mockk-agent = { group = "io.mockk", name = "mockk-agent", version.ref = "mockk" }
+mockk-android = { group = "io.mockk", name = "mockk-android", version.ref = "mockk" }
 volley = { module = "com.android.volley:volley", version.ref = "volley" }
-androidx-camera-core = { group = "androidx.camera", name = "camera-core", version.ref = "cameraCore" }
-androidx-camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "cameraLifecycle" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 android-dynamic-feature = { id = "com.android.dynamic-feature", version.ref = "agp" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
+org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
