--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ featureDeliveryKtx = "2.1.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 kotlinStdlib = "2.0.21"
-kotlinxCoroutinesCore = "1.9.0-RC"
+kotlinxCoroutinesCore = "1.9.0"
 kotlinxSerializationJson = "1.7.1"
 kxml2 = "2.3.0"
 lintTestsVersion = "31.7.2"
