--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -12,26 +12,32 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: set up JDK 21
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'zulu'
-        cache: gradle
+      - uses: actions/checkout@v4
+      - name: set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'zulu'
+          cache: gradle
 
-    - name: Create local.properties
-      run: |
-        echo "sdk.dir=${{ secrets.ANDROID_SDK_ROOT }}" > local.properties
-        echo "instrumentationStorePassword=${{ secrets.INSTRUMENTATION_STORE_PASSWORD }}" >> local.properties
-        echo "instrumentationKeyPassword=${{ secrets.INSTRUMENTATION_KEY_PASSWORD }}" >> local.properties
-        echo "instrumentationKeyStore=${{ secrets.INSTRUMENTATION_KEYSTORE }}" >> local.properties
-        echo "instrumentationStoreKeyAlias=${{ secrets.INSTRUMENTATION_STORE_KEY_ALIAS }}" >> local.properties
-        cat << 'EOF' > app/google-services.json
-        ${{ secrets.FIREBASE_CONFIG }}
-        EOF
+      - name: Create local.properties
+        run: |
+          echo "sdk.dir=${{ secrets.ANDROID_SDK_ROOT }}" > local.properties
+          echo "instrumentationStorePassword=${{ secrets.INSTRUMENTATION_STORE_PASSWORD }}" >> local.properties
+          echo "instrumentationKeyPassword=${{ secrets.INSTRUMENTATION_KEY_PASSWORD }}" >> local.properties
+          echo "instrumentationKeyStore=${{ secrets.INSTRUMENTATION_KEYSTORE }}" >> local.properties
+          echo "instrumentationStoreKeyAlias=${{ secrets.INSTRUMENTATION_STORE_KEY_ALIAS }}" >> local.properties
+          cat << 'EOF' > app/google-services.json
+          ${{ secrets.FIREBASE_CONFIG }}
+          EOF
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Build with Gradle
+        run: ./gradlew build
+      - name: Upload test reports
+        if: failure()
+        uses: actions/upload-artifact@v2
+        with:
+          name: test-report
+          path: app/build/reports/tests/testDebugUnitTest/
