separate core preferences and statemachine as modules
separate core preferences and statemachine as modules

Fix statemachine gradle build..must use compose compiler and compose build feature, else compose side crashes when used - even if app itself had these

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,7 +88,7 @@
             android:label="@string/title_activity_restore_screen" />
 
         <service
-            android:name=".service.AutolockingService"
+            android:name=".autolocking.AutolockingService"
             android:enabled="true" />
     </application>
 </manifest>
