Make backup screen activity - so we can start it from the notification directly, fix issue btw. KClass<*>, Class<*> delivered to notification DSL while at it

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,5 +81,9 @@
             android:name=".ui.activities.RestoreDatabaseScreen"
             android:exported="false"
             android:label="@string/title_activity_restore_screen" />
+        <activity
+            android:name=".ui.activities.BackupDatabaseScreen"
+            android:exported="false"
+            android:label="@string/title_activity_restore_screen" />
     </application>
 </manifest>
