--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,15 +2,19 @@
 # libraries
 activityCompose = "1.9.3"
 androidXTest = "1.6.1"
+androidXTestRunner = "1.6.2"
+androidXTestMonitor = "1.7.2"
 appcompat = "1.7.0"
 bcprovJdk16 = "1.46"
 biometricKtx = "1.2.0-alpha05"
 cameraCore = "1.4.1"
 coreKtx = "1.15.0"
+espressoCore = "3.6.1"
 featureDeliveryKtx = "2.1.0"
 guava = "33.4.0-android"
 junit = "4.13.2"
 junitVersion = "1.2.1"
+junitVersionKtx = "1.2.1"
 kotlinStdlib = "2.1.0"
 kotlinxCoroutinesCore = "1.10.1"
 kotlinxSerializationJson = "1.8.0"
@@ -20,7 +24,6 @@ material = "1.12.0"
 material3Android = "1.3.1"
 materialIconsExtendedAndroid = "1.7.6"
 mockk = "1.13.14"
-monitor = "1.7.1"
 preferenceKtx = "1.2.1"
 runtimeLivedataVersion = "1.7.6"
 uiTestJunit4Android = "1.7.6"
@@ -33,10 +36,7 @@ agp = "8.7.3"
 # see also dependency resolution in settings.gradle.kts for 2.0.21!
 jetbrainsKotlinJvm = "2.0.21"
 kotlin = "2.1.0"
-espressoCore = "3.6.1"
-runtimeLivedata = "1.7.6"
 uiTestAndroid = "1.7.6"
-firebaseCrashlyticsBuildtools = "3.0.2"
 
 [libraries]
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
@@ -46,18 +46,20 @@ androidx-camera-camera2 = { group = "androidx.camera", name = "camera-camera2", 
 androidx-camera-core = { group = "androidx.camera", name = "camera-core", version.ref = "cameraCore" }
 androidx-camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "cameraCore" }
 androidx-camera-view = { group = "androidx.camera", name = "camera-view", version.ref = "cameraCore" }
+androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espressoCore" }
+androidx-test-core = { module = "androidx.test:core", version.ref = "androidXTest" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-material-icons-extended-android = { group = "androidx.compose.material", name = "material-icons-extended-android", version.ref = "materialIconsExtendedAndroid" }
 androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
-androidx-monitor = { module = "androidx.test:monitor", version.ref = "monitor" }
+androidx-monitor = { module = "androidx.test:monitor", version.ref = "androidXTestMonitor" }
 androidx-preference-ktx = { group = "androidx.preference", name = "preference-ktx", version.ref = "preferenceKtx" }
 androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedataVersion" }
-androidx-test-core = { group = "androidx.test", name = "core", version = "androidXTest" }
 androidx-test-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
-androidx-test-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitVersion" }
+androidx-test-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitVersionKtx" }
 androidx-test-rules = { group = "androidx.test", name = "rules", version.ref = "androidXTest" }
-androidx-test-runner = { group = "androidx.test", name = "runner", version.ref = "androidXTest" }
+androidx-test-runner = { group = "androidx.test", name = "runner", version.ref = "androidXTestRunner" }
 androidx-test-uiautomator = { module = "androidx.test.uiautomator:uiautomator", version.ref = "uiautomator" }
+androidx-ui-test-android = { group = "androidx.compose.ui", name = "ui-test-android", version.ref = "uiTestAndroid" }
 androidx-ui-test-junit4-android = { group = "androidx.compose.ui", name = "ui-test-junit4-android", version.ref = "uiTestJunit4Android" }
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest", version.ref = "uiTestJunit4Android" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "uiTooling" }
@@ -79,10 +81,6 @@ mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
 mockk-agent = { group = "io.mockk", name = "mockk-agent", version.ref = "mockk" }
 mockk-android = { group = "io.mockk", name = "mockk-android", version.ref = "mockk" }
 volley = { module = "com.android.volley:volley", version.ref = "volley" }
-androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
-androidx-ui-test-android = { group = "androidx.compose.ui", name = "ui-test-android", version.ref = "uiTestAndroid" }
-firebase-crashlytics-buildtools = { group = "com.google.firebase", name = "firebase-crashlytics-buildtools", version.ref = "firebaseCrashlyticsBuildtools" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
