--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,42 +1,42 @@
 [versions]
 # libraries
-activityCompose = "1.10.1"
-androidXTest = "1.6.1"
-androidXTestRunner = "1.6.2"
-androidXTestMonitor = "1.7.2"
-appcompat = "1.7.0"
+activityCompose = "1.11.0"
+androidXTest = "1.7.0"
+androidXTestRunner = "1.7.0"
+androidXTestMonitor = "1.8.0"
+appcompat = "1.7.1"
 bcprovJdk16 = "1.46"
 biometricKtx = "1.2.0-alpha05"
-cameraCore = "1.4.2"
-coreKtx = "1.16.0"
-espressoCore = "3.6.1"
+cameraCore = "1.5.1"
+coreKtx = "1.17.0"
+documentfile = "1.1.0"
 featureDeliveryKtx = "2.1.0"
-guava = "33.4.8-android"
+guava = "33.5.0-android"
 junit = "4.13.2"
-junitVersion = "1.2.1"
-junitVersionKtx = "1.2.1"
-kotlinStdlib = "2.1.21"
+junitVersion = "1.3.0"
+junitVersionKtx = "1.3.0"
+kotlinStdlib = "2.2.0"
 kotlinxCoroutinesCore = "1.10.2"
-kotlinxSerializationJson = "1.8.1"
+kotlinxSerializationJson = "1.9.0"
 kxml2 = "2.3.0"
 lintTestsVersion = "31.13.0"
-material = "1.12.0"
-material3Android = "1.3.2"
+material = "1.13.0"
+material3Android = "1.4.0"
 materialIconsExtendedAndroid = "1.7.8"
-mockk = "1.14.2"
+mockk = "1.14.6"
 preferenceKtx = "1.2.1"
-runtimeLivedataVersion = "1.8.2"
-uiTestJunit4Android = "1.8.2"
-uiTooling = "1.8.2"
-uiToolingPreviewAndroid = "1.8.2"
+runtimeLivedataVersion = "1.9.4"
+uiTestJunit4Android = "1.9.4"
+uiTooling = "1.9.4"
+uiToolingPreviewAndroid = "1.9.4"
 uiautomator = "2.3.0"
 volley = "1.2.1"
 #plugins
 agp = "8.13.0"
 # see also dependency resolution in settings.gradle.kts for 2.0.21!
-jetbrainsKotlinJvm = "2.0.21"
-kotlin = "2.1.0"
-uiTestAndroid = "1.8.2"
+jetbrainsKotlinJvm = "2.2.21"
+kotlin = "2.2.21"
+uiTestAndroid = "1.9.4"
 
 [libraries]
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
@@ -46,7 +46,7 @@ androidx-camera-camera2 = { group = "androidx.camera", name = "camera-camera2", 
 androidx-camera-core = { group = "androidx.camera", name = "camera-core", version.ref = "cameraCore" }
 androidx-camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "cameraCore" }
 androidx-camera-view = { group = "androidx.camera", name = "camera-view", version.ref = "cameraCore" }
-androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espressoCore" }
+androidx-documentfile = { module = "androidx.documentfile:documentfile", version.ref = "documentfile" }
 androidx-test-core = { module = "androidx.test:core", version.ref = "androidXTest" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-material-icons-extended-android = { group = "androidx.compose.material", name = "material-icons-extended-android", version.ref = "materialIconsExtendedAndroid" }
