--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ junitVersion = "1.3.0"
 junitVersionKtx = "1.3.0"
 kotlinStdlib = "2.2.21"
 kotlinxCoroutinesCore = "1.10.2"
+kotlinxDatetime = "0.6.0"
 kotlinxSerializationJson = "1.9.0"
 kxml2 = "2.3.0"
 lintTestsVersion = "31.13.0"
@@ -27,6 +28,7 @@ material = "1.13.0"
 material3Android = "1.4.0"
 materialIconsExtendedAndroid = "1.7.8"
 mockk = "1.14.6"
+napier = "2.7.1"
 preferenceKtx = "1.2.1"
 runtimeLivedataVersion = "1.9.4"
 uiTestJunit4Android = "1.9.4"
@@ -83,6 +85,7 @@ junit6_jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.
 junit6_platform = { group = "org.junit.platform", name = "junit-platform-launcher", version.ref = "junit6" }
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlinStdlib" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutinesCore" }
+kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime", version.ref = "kotlinxDatetime" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 kxml2 = { group = "net.sf.kxml", name = "kxml2", version.ref = "kxml2" }
 lint-tests-v3000 = { module = "com.android.tools.lint:lint-tests", version.ref = "lintTestsVersion" }
@@ -90,6 +93,13 @@ material = { group = "com.google.android.material", name = "material", version.r
 mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
 mockk-agent = { group = "io.mockk", name = "mockk-agent", version.ref = "mockk" }
 mockk-android = { group = "io.mockk", name = "mockk-android", version.ref = "mockk" }
+napier = { group = "io.github.aakira", name = "napier", version.ref = "napier" }
+preference-ktx = { group = "androidx.preference", name = "preference-ktx", version.ref = "preferenceKtx" }
+runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedataVersion" }
+ui-test-junit4-android = { group = "androidx.compose.ui", name = "ui-test-junit4-android", version.ref = "uiTestJunit4Android" }
+ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "uiTooling" }
+ui-tooling-preview-android = { group = "androidx.compose.ui", name = "ui-tooling-preview-android", version.ref = "uiToolingPreviewAndroid" }
+uiautomator = { module = "androidx.test.uiautomator:uiautomator", version.ref = "uiautomator" }
 volley = { module = "com.android.volley:volley", version.ref = "volley" }
 
 [plugins]
@@ -98,4 +108,5 @@ android-dynamic-feature = { id = "com.android.dynamic-feature", version.ref = "a
 android-library = { id = "com.android.library", version.ref = "agp" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
+kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
